k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rag-backend-service

spec:
  selector:
    app: rag-backend

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: NodePort
