k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rag-frontend-service

spec:
  selector:
    app: rag-frontend

  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501

  type: NodePort
